--- a/split-join.html
+++ b/split-join.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Split Join</title>
 </head>
 <body>
 <script src="js/planets-string.js"></script>
