--- a/welcome.html
+++ b/welcome.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TITLE</title>
+    <title>Hello World</title>
 </head>
 <body>
 <script> src=""</script>
+"Hello, World!".
 </body>
 </html>
