created github example html

--- a/welcome.html
+++ b/welcome.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
+    <meta charset="UTF-8" />
+    <title>Veridian Dynamics</title>
 </head>
 <body>
-<script> src=""</script>
-"Hello, World!".
+<h1 id="top"></h1>
+<div class="parent">
+    <div class="div1">
+        <h1><em>Welcome to Veridian Dynamics!</em></h1>
+        <p>
+            At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems
+            with <strong><em>technology</em></strong
+        >.
+        </p>
+    </div>
+
+    <hr />
+
+    <div class="div2">
+        <div class="body-core-values">
+            <h2>Core Values</h2>
+            <ul>
+                <li>Competence</li>
+                <li>Involvement</li>
+                <li>Technology</li>
+            </ul>
+        </div>
+
+        <div class="body-process">
+            <h2>Our Process</h2>
+            <ol>
+                <li>Plan</li>
+                <li>Evaluate</li>
+                <li>Implement</li>
+            </ol>
+        </div>
+
+        <div class="body-vision">
+            <h2>2020 Vision</h2>
+            <ul>
+                <li>Become #1 in Technology</li>
+                <li>Increase Success by 20%</li>
+                <li>Increase Business by 30%</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="div3">
+        <hr />
+        <br />
+        <h2 class="center">Company Vision</h2>
+        <div>
+            <img
+                    src="https://images.pexels.com/photos/1207918/pexels-photo-1207918.jpeg"
+                    alt="Coffee"
+                    width="500"
+                    height="400"
+            />
+            <img
+                    src="https://images.pexels.com/photos/1749303/pexels-photo-1749303.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="CoffeeTwo"
+                    width="500"
+                    height="400"
+            />
+        </div>
+        <div>
+            <img
+                    src="https://images.pexels.com/photos/414628/pexels-photo-414628.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="CoffeeThree"
+                    width="500"
+                    height="400"
+            />
+            <img
+                    src="https://images.pexels.com/photos/1627933/pexels-photo-1627933.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="Coffee"
+                    width="500"
+                    height="400"
+            />
+        </div>
+    </div>
+
+    <div class="div4">
+        <hr />
+        <h2>Our Product</h2>
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advanced</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
+        <br />
+        <em>All products come with our quality guarantee<sup>TM</sup></em>
+        <br />
+        <br />
+        <a href="#top">Go to the top of page<br /></a>
+    </div>
+</div>
+<br />
 </body>
 </html>
