end of day 3.22

--- a/github.html
+++ b/github.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>github</title>
+  <meta charset="UTF-8">
+  <title>github</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 </div>
 
 <div>
-  <h2><img src="img/30x30.svg"> Codeup </h2>
+  <h2><img src="img/codeup-arrow.png"> Codeup </h2>
 </div>
 <div class="div2">
   <ul>
@@ -32,7 +32,7 @@
 </div>
 
 <div class="div3">
-<header>Codeup's dev team</header>
+  <header>Codeup's dev team</header>
 
   <table>
     <tr>
