--- a/forms.html
+++ b/forms.html
@@ -1,38 +1,71 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<title>
-    Register With Us!
-</title>
+<title>Register With Us!</title>
 <body>
 <form method="POST" action="https://request-inspector.glitch.me/">
     <label for="user-email">Email:</label>
-    <input id="user-email" name="user-email" type="email" placeholder="Enter Email Here">
+    <input
+            id="user-email"
+            name="user-email"
+            type="email"
+            placeholder="Enter Email Here"
+    />
 
-    <br>
-    <br>
-
+    <br />
+    <br />
 
     <label for="password">Password:</label>
-    <input id="password" name="user-password" type="password" placeholder="Enter Password Here">
+    <input
+            id="password"
+            name="user-password"
+            type="password"
+            placeholder="Enter Password Here"
+    />
 
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
 
-    <textarea name="Bio" id="bio-input" cols="30" rows="10" placeholder="Enter Bio here"></textarea>
+    <textarea
+            name="Bio"
+            id="bio-input"
+            cols="30"
+            rows="10"
+            placeholder="Enter Bio here"
+    ></textarea>
 
     <h4>How did you hear about us?</h4>
     <label for="Billboard">Billboard</label>
-    <input type="checkbox" id="Billboard" value="Billboard" name="how-did-you-hear-about-us1">
+    <input
+            type="checkbox"
+            id="Billboard"
+            value="Billboard"
+            name="how-did-you-hear-about-us1"
+    />
 
     <label for="radio-advertisement">Radio Advertisement</label>
-    <input type="checkbox" id="radio-advertisement" value="radio-advertisement" name="how-did-you-hear-about-us2">
+    <input
+            type="checkbox"
+            id="radio-advertisement"
+            value="radio-advertisement"
+            name="how-did-you-hear-about-us2"
+    />
 
     <label for="internet">Internet</label>
-    <input type="checkbox" id="internet" value="internet" name="how-did-you-hear-about-us3">
+    <input
+            type="checkbox"
+            id="internet"
+            value="internet"
+            name="how-did-you-hear-about-us3"
+    />
 
     <label for="other">Other</label>
-    <input type="checkbox" id="other" value="other" name="how-did-you-hear-about-us4">
+    <input
+            type="checkbox"
+            id="other"
+            value="other"
+            name="how-did-you-hear-about-us4"
+    />
 
     <h4>What Browser are you using?</h4>
     <select name="browser-type" id="browser-type">
@@ -42,9 +75,8 @@
         <option value="other" selected>Other</option>
     </select>
 
-    <br><br>
-    <input type="submit">
-
+    <br /><br />
+    <input type="submit" />
 </form>
 </body>
 </html>
