--- a/welcome.html
+++ b/welcome.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>Veridian Dynamics</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-<h1 id="top"></h1>
-<div class="parent">
+<div class="body">
     <div class="div1">
-        <h1><em>Welcome to Veridian Dynamics!</em></h1>
+        <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
         <p>
             At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems
             with <strong><em>technology</em></strong
@@ -64,8 +65,7 @@
                     width="500"
                     height="400"
             />
-        </div>
-        <div>
+            <br>
             <img
                     src="https://images.pexels.com/photos/414628/pexels-photo-414628.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="CoffeeThree"
