--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox-nav-exercise</title>
-    <link rel="stylesheet" href="css/nav-exercise.css">
+    <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans&display=swap">
 </head>
 <body>
