--- a/working.html
+++ b/working.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Working Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Working</title>
+    <link rel="stylesheet" href="css/working.css">
+    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<script src="js/working.js"></script>
+
+<div class="alert-info hidden-on-desktop">
+    <a href="#main">Skip to main content</a>
+</div>
+
+<h1>Company</h1>
+
+<nav>
+    <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
+
+<div class="header-img">
+    <img src="https://via.placeholder.com/900x400?" alt="">
+</div>
+
+<section id="main" class="main">
+    <h2>Main Section</h2>
+    <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+</section>
+
+<section class="sub-section">
+    <h2>Sub-section</h2>
+    <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+</section>
+
+<footer>
+    <p>(c) 2017 All rights reserved</p>
+    <div id="social-media-links">
+        <i class="fa-brands fa-twitter" style="color: #75d5f5;"></i>
+        <i class="fa-brands fa-facebook" style="color: #005eff;"></i>
+        <i class="fa-brands fa-instagram" style="color: #e770ff;"></i>
+    </div>
+</footer>
+
 </body>
 </html>
