--- a/sandbox.html
+++ b/sandbox.html
@@ -1,77 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Flexbox Fundamentals Exercise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>SANDBOX</title>
     <link rel="stylesheet" href="css/sandbox.css">
+    <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<footer>
-    <div class="container">
-        <section class="top-footer">
-            <div class="logo-div">
-                <h1><a href="#">Logo</a></h1>
-                <a href="#">Sologan Company</a>
-            </div>
-            <ul>
-                <li><a href="#">Weebly Themes</a></li>
-                <li><a href="#">Pre-Sale FAQS</a></li>
-                <li><a href="#">Submit a Ticket</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Theme Tweak</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Showcase</a></li>
-                <li><a href="#">Widgetkit</a></li>
-                <li><a href="#">Support</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Affiliates</a></li>
-                <li><a href="#">Resources</a></li>
-            </ul>
-        </section>
-        <div class="line"></div>
-        <section class="bottom-footer">
-            <div class="social-media-links">
-                <a href="#">
-                    <span class="icon-wrapper">
-                        <i class="fab fa-facebook-f"></i>
-                    </span>
-                </a>
-                <a href="#">
-                    <span class="icon-wrapper">
-                        <i class="fab fa-twitter"></i>
-                    </span>
-                </a>
-                <a href="#">
-                    <span class="icon-wrapper">
-                        <i class="fas fa-rss"></i>
-                    </span>
-                </a>
-                <a href="#">
-                    <span class="icon-wrapper">
-                        <i class="fab fa-google-plus-g"></i>
-                    </span>
-                </a>
-                <a href="#">
-                    <span class="icon-wrapper">
-                        <i class="fab fa-linkedin-in"></i>
-                    </span>
-                </a>
-            </div>
-            <h5>@Copyright. All rights reserved.</h5>
-        </section>
+
+    <div class="alert-info hidden-on-desktop">
+        <a href="#main">Skip to main content</a>
     </div>
-</footer>
 
+    <h1>Company</h1>
 
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
+    <div class="header-img">
+        <img src="https://via.placeholder.com/900x400?" alt="">
+    </div>
 
+    <section id="main" class="main">
+        <h2>Main Section</h2>
+        <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+    </section>
+
+    <section class="sub-section">
+        <h2>Sub-section</h2>
+        <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+    </section>
+
+    <footer>
+        <p>(c) 2017 All rights reserved</p>
+        <div id="social-media-links">
+            <i class="fa-brands fa-twitter" style="color: #75d5f5;"></i>
+            <i class="fa-brands fa-facebook" style="color: #005eff;"></i>
+            <i class="fa-brands fa-instagram" style="color: #e770ff;"></i>
+        </div>
+    </footer>
 
 </body>
 </html>
