--- a/working.html
+++ b/working.html
@@ -1,53 +1,409 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Working</title>
-    <link rel="stylesheet" href="css/working.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!--Fontawesome CDN-->
     <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
+
+    <title>Pizza World</title>
+
+    <style>
+        #search-btn {
+            background-color: white;
+        }
+
+        #main-jumbotron {
+            background-image: url("img/pizza.png");
+        }
+
+        #jumbotron-container {
+            padding: 0;
+            background-color: #ffffffa6;
+        }
+    </style>
 </head>
+<body id="custom">
 
-<body>
+<!--Start navbar-->
 
-<div class="alert-info hidden-on-desktop">
-    <a href="#main">Skip to main content</a>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Pizza World</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<h1>Company</h1>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 
-<nav>
-    <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Order online <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">Menu</a>
+            </li>
+
+            <li>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Zip code" aria-label="Search">
+                    <button class="btn btn-outline-secondary my-2 my-sm-0 k" type="submit" id="search-btn">Search stores
+                        near you!
+                    </button>
+                </form>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <i class="fa fa-user"></i>
+                Sign up
+            </li>
+        </ul>
+    </div>
 </nav>
 
-<div class="header-img">
-    <img src="https://via.placeholder.com/900x400?" alt="">
-</div>
+<!--End navbar-->
 
-<section id="main" class="main">
-    <h2>Main Section</h2>
-    <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-</section>
+<!--start container-->
+<div class="container">
 
-<section class="sub-section">
-    <h2>Sub-section</h2>
-    <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-</section>
+    <!--Start jumbotron-->
 
-<footer>
-    <p>(c) 2017 All rights reserved</p>
-    <div id="social-media-links">
-        <i class="fa-brands fa-twitter" style="color: #75d5f5;"></i>
-        <i class="fa-brands fa-facebook" style="color: #005eff;"></i>
-        <i class="fa-brands fa-instagram" style="color: #e770ff;"></i>
+    <div class="jumbotron jumbotron-fluid d-none d-md-block" id="main-jumbotron">
+        <div class="container-fluid text-center" id="jumbotron-container">
+            <h1 class="display-4" id="jumbotron-header">Welcome to Pizza World!</h1>
+        </div>
     </div>
-</footer>
 
+    <!--end jumbotron-->
+
+    <h2>Build your own pizza!</h2>
+
+    <hr>
+
+
+    <!------ TABS----->
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="tab-1" data-toggle="tab" href="#size-crust" role="tab"
+               aria-controls="size-crust"
+               aria-selected="true"><span class="badge badge-pill badge-secondary">1</span>
+                Size and Crust</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="tab-2" data-toggle="tab" href="#cheese-sauce" role="tab"
+               aria-controls="cheese-sauce"
+               aria-selected="false"><span class="badge badge-pill badge-secondary">2</span>
+                Cheese and Sauce</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="tab-3" data-toggle="tab" href="#toppings" role="tab" aria-controls="toppings"
+               aria-selected="false"><span class="badge badge-pill badge-secondary">3</span>
+                Toppings</a>
+        </li>
+    </ul>
+
+    <!--------CRUST/SIZE-----=--->
+    <div class="tab-content" id="myTabContent">
+
+        <div class="tab-pane fade show active" id="size-crust" role="tabpanel" aria-labelledby="tab-1">
+
+            <div class="card">
+
+                <div class="card-header bg-primary text-white">
+                    Choose Size and Crust
+                </div>
+
+                <div class="card-body">
+
+                    <div class="card mb-3">
+                        <p class="card-header">Hand Tossed</p>
+                        <div class="card-body  p-0">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="crust-type" id="hand-small"
+                                               value="hand-small">
+                                        <label class="form-check-label" for="hand-small">
+                                            Small (10")
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="crust-type" id="hand-medium"
+                                               value="hand-medium">
+                                        <label class="form-check-label" for="hand-medium">
+                                            Medium (12")
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <p class="card-header">Crispy Thin</p>
+                        <div class="card-body p-0">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.</li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="crust-type" id="crispy-med"
+                                               value="crispy-med">
+                                        <label class="form-check-label" for="hand-small">
+                                            Medium (12")
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="crust-type" id="crispy-lg"
+                                               value="crispy-lg">
+                                        <label class="form-check-label" for="crispy-lg">
+                                            Large (14")
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="card-footer text-right">
+                    <a href="#tab-2" class="btn btn-primary">Next Step <i class="fa fa-angle-right"></i></a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <!--------CHEESE/SAUCE-------->
+        <div class="tab-pane fade" id="cheese-sauce" role="tabpanel" aria-labelledby="tab-2">
+
+            <div class="card">
+
+                <div class="card-header bg-primary text-white">
+                    Choose Cheese and Sauce
+                </div>
+
+                <div class="card-body">
+
+                    <div class="card mb-3">
+                        <p class="card-header">Cheese</p>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label for="cheese-select">How Much?</label>
+                                <select class="form-control" id="cheese-select">
+                                    <option>Light</option>
+                                    <option>Normal</option>
+                                    <option>Extra</option>
+                                    <option>Double</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="card mb-3">
+                        <p class="card-header">Sauce</p>
+                        <div class="card-body p-0">
+                            <ul class="list-group list-group-flush">
+
+                                <li class="list-group-item">
+                                    <div class="form-group">
+                                        <label for="sauce-type-select">What Type?</label>
+                                        <select class="form-control" id="sauce-type-select">
+                                            <option>Tomato</option>
+                                            <option>Marinara</option>
+                                            <option>BBQ</option>
+                                            <option>Alfredo</option>
+                                        </select>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-group">
+                                        <label for="sauce-amount-select">How Much?</label>
+                                        <select class="form-control" id="sauce-amount-select">
+                                            <option>Light</option>
+                                            <option>Normal</option>
+                                            <option>Extra</option>
+                                        </select>
+                                    </div>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="card-footer text-right">
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-primary" ><i class="fa fa-angle-left"></i> Previous Step
+                        </button>
+                        <button type="button" class="btn btn-primary">Next Step <i class="fa fa-angle-right"></i>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+        <!-------- TOPPINGS---------->
+        <div class="tab-pane fade" id="toppings" role="tabpanel" aria-labelledby="tab-3">
+
+            <div class="card">
+
+                <div class="card-header bg-primary text-white">
+                    Choose Toppings
+                </div>
+
+                <div class="card-body">
+
+                    <div class="card mb-3">
+                        <p class="card-header">Choose Meats</p>
+                        <div class="card-body p-0">
+                            <ul class="list-group list-group-flush">
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="beef" id="beef">
+                                        <label class="form-check-label" for="beef">
+                                            Beef
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="ham" id="ham">
+                                        <label class="form-check-label" for="ham">
+                                            Ham
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="philly"
+                                               id="philly-steak">
+                                        <label class="form-check-label" for="philly-steak">
+                                            Philly Steak
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="bacon" id="bacon">
+                                        <label class="form-check-label" for="bacon">
+                                            Bacon
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card mb-3">
+                        <p class="card-header">Choose Non-Meats</p>
+                        <div class="card-body p-0">
+                            <ul class="list-group list-group-flush">
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="green-peppers"
+                                               id="green-peppers">
+                                        <label class="form-check-label" for="green-peppers">
+                                            Green Peppers
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="mushrooms"
+                                               id="mushrooms">
+                                        <label class="form-check-label" for="mushrooms">
+                                            Mushrooms
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="onions"
+                                               id="onions">
+                                        <label class="form-check-label" for="onions">
+                                            Onions
+                                        </label>
+                                    </div>
+                                </li>
+
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="jalepeno" id="jalepeno">
+                                        <label class="form-check-label" for="jalepeno">
+                                            Jalapeño Peppers
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <div class="card-footer text-right">
+                    <button type="button" class="btn btn-primary"> Checkout <i class="fa fa-shopping-cart"></i></button>
+
+                </div>
+            </div>
+
+
+        </div>
+
+        <!--end tabs-->
+    </div>
+
+
+</div>
+<!--End container-->
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 </body>
 </html>
