--- a/working.html
+++ b/working.html
@@ -122,7 +122,7 @@
                     Choose Size and Crust
                 </div>
 
-                <div class="card-body">
+                div class="card-body">
 
                     <div class="card mb-3">
                         <p class="card-header">Hand Tossed</p>
