--- a/order-pizza.html
+++ b/order-pizza.html
@@ -28,16 +28,14 @@
       <a class="navbar-brand" href="#">Pizza World</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
             <a class="nav-link active" aria-current="page" href="#">Order Online</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link text-muted" href="#">Menu</a>
           </li>
-
           <li>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
@@ -62,7 +60,7 @@
   <div class="jumbotron mt-4 mb-5 p-5 d-flex align-items-center">
     <div class="opacity-75 bg-light flex-fill text-center display-4">Welcome to Pizza World!</div>
   </div>
-  <!--end jumbotron-->
+  <!--End jumbotron-->
 
   <h2>Build your own pizza!</h2>
 
@@ -71,27 +69,26 @@
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="size-tab" data-bs-toggle="tab" data-bs-target="#size" type="button" role="tab" aria-controls="size" aria-selected="true"><span class="badge bg-secondary rounded-pill">1</span>Size and Crust</button>
     </li>
-
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="cheese-tab" data-bs-toggle="tab" data-bs-target="#cheese" type="button" role="tab" aria-controls="cheese" aria-selected="false"><span class="badge bg-secondary rounded-pill">2</span>Cheese and Sauce</button>
     </li>
-
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="toppings-tab" data-bs-toggle="tab" data-bs-target="#toppings" type="button" role="tab" aria-controls="toppings" aria-selected="false"><span class="badge bg-secondary rounded-pill">3</span>Toppings</button>
     </li>
   </ul>
+
   <!--Tab content-->
   <div class="tab-content" id="myTabContent">
-    <!--size and crust-->
+
+    <!--Size and Crust-->
     <div class="tab-pane fade show active border" id="size" role="tabpanel" aria-labelledby="size-tab">
-      <!--Main card-->
       <div class="card">
         <div class="card-header bg-primary text-white">
           Choose Size and Crust
         </div>
-        <!--hand tossed or thin-->
+
+        <!--Hand Tossed-->
         <div class="card-body">
-          <!--hand tossed card-->
           <div class="card">
             <div class="card-header">
               Hand Tossed
@@ -108,7 +105,8 @@
               </li>
             </ul>
           </div>
-          <!--crispy thin card-->
+
+          <!--Crispy Thin-->
           <div class="card mt-4">
             <div class="card-header">
               Crispy Thin
@@ -126,21 +124,22 @@
             </ul>
           </div>
         </div>
-        <!--footer with button (non-functional)-->
+        <!--Size and Crust Footer-->
         <div class="card-footer p-2 d-flex justify-content-end">
           <button class="btn btn-primary">Next Step ></button>
         </div>
       </div>
     </div>
+
     <!--Cheese and Sauce-->
     <div class="tab-pane fade border" id="cheese" role="tabpanel" aria-labelledby="cheese-tab">
-      <!--main card-->
       <div class="card">
         <div class="card-header bg-primary text-white">
           Choose Size and Crust
         </div>
+
+        <!--Cheese-->
         <div class="card-body">
-          <!--cheese card-->
           <div class="card">
             <div class="card-header">
               Cheese
@@ -157,7 +156,7 @@
               </li>
             </ul>
           </div>
-          <!--sauce card-->
+          <!--Sauce-->
           <div class="card mt-4">
             <div class="card-header">
               Sauce
@@ -184,7 +183,7 @@
             </ul>
           </div>
         </div>
-        <!--footer with button (non-functional)-->
+        <!--Cheese and Sauce Footer-->
         <div class="card-footer p-2 d-flex justify-content-end">
           <div class="btn-group">
             <button class="btn btn-primary">< Previous</button>
@@ -193,20 +192,21 @@
         </div>
       </div>
     </div>
+
     <!--Toppings-->
     <div class="tab-pane fade border" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">
-      <!--Main card-->
       <div class="card">
         <div class="card-header bg-primary text-white">
           Choose Toppings
         </div>
-        <!--hand tossed or thin-->
+
+        <!--Meat Toppings-->
         <div class="card-body">
-          <!--hand tossed card-->
           <div class="card">
             <div class="card-header">
               Choose Meats
             </div>
+
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <input class="form-check-input" type="checkbox" name="beef" id="beef">
@@ -226,7 +226,7 @@
               </li>
             </ul>
           </div>
-          <!--crispy thin card-->
+          <!--Non-Meat Toppings-->
           <div class="card mt-4">
             <div class="card-header">
               Non-Meats
@@ -251,11 +251,22 @@
             </ul>
           </div>
         </div>
-<!-- End Container -->
+        <!--Toppings Footer-->
+        <div class="card-footer p-2 d-flex justify-content-end">
+          <button class="btn btn-primary">Checkout</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<!-- Main page content -->
+  <!-- End Container -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<!-- Your custom JS goes here -->
+
+  <!--Bootstrap JS-->
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  <!-- Your custom JS goes here -->
+
 </body>
 </html>
