--- a/sandbox.html
+++ b/sandbox.html
@@ -253,7 +253,15 @@
                 </div>
             <!--Toppings Footer-->
                 <div class="card-footer p-2 d-flex justify-content-end">
-                    <button class="btn btn-primary">Checkout</button>
+                    <button type="submit" class="btn btn-primary">Checkout<i class="fa-sharp fa-solid fa-cart-shopping ps-1"></i></button>
+
+
+
+
+
+
+
+
                 </div>
             </div>
         </div>
