--- a/t-block.html
+++ b/t-block.html
@@ -23,12 +23,12 @@
 <!-- Begin Container -->
 
 <div class="container">
-    <div class="row row-col-1">
+    <div class="row">
       <div class="col text-center subheading mt-3">
         <h1>CODY THE DUCK</h1>
       </div>
     </div>
-      <div class="row row-col-2">
+      <div class="row">
         <div class="col text-center subheading">
           <h2>Software Developer</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam assumenda cumque earum, error ex explicabo, fugit hic laborum officiis placeat quasi quidem repellat suscipit, velit!</p>
@@ -38,7 +38,7 @@
 </div>
 
 <div class="container">
-  <ul id="contactInfo" class="row">
+  <ul id="contact" class="row">
     <li class="col-md-3 text-center"><i class="fa-solid fa-phone"></i>
       210-123-1234</li>
     <li class="col-md-3 text-center"><i class="fa-regular fa-envelope"></i>
@@ -52,11 +52,45 @@
 
 <hr>
 
+<div class="container-justify">
+<section class="row ms-3">
+  <section class="col-md-4">
+    <h2>SKILLS AND ABILITIES</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>Bootstrap</li>
+    </ul>
+    <h2>ACADEMIC</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cupiditate eligendi, esse eum ex fuga, laboriosam quaerat quas tempora temporibus totam velit, veritatis. Autem dolorem dolores, earum quas reprehenderit voluptate.</p>
+    <h2>PROFESSIONAL EXPERIENCE</h2>
+    <h6>Job 2</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, eligendi excepturi hic incidunt laudantium unde velit. Adipisci impedit iure minima numquam possimus saepe, tempora ut vero voluptatibus! Commodi, rem, sit?</p>
+    <h6>Job 1</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci, corporis esse eum excepturi id iure maiores molestiae nemo, non pariatur perspiciatis qui quia quibusdam reprehenderit sed, sequi vero voluptates!</p>
+
+  </section>
+  <!-- Development Projects / awards and Involvement-->
+  <section class="col-md-8">
+    <h2>DEVELOPMENT PROJECTS</h2>
+    <h6>Project 3</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+    <h6>Project 2</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+    <h6>Project 1</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto asperiores corporis fuga ipsum itaque, nam nisi non omnis quae quibusdam quis sequi tempore voluptate, voluptatibus. Id quibusdam reiciendis veritatis!</p>
+
+    <h2>AWARDS AND INVOLVEMENT</h2>
+    <h6>AWARD 1</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequatur eius et eveniet, facere necessitatibus nisi non quia quod quos, repudiandae, sequi tenetur. Consequatur in numquam praesentium tenetur ut veritatis!</p>
+    <h6>INVOLVEMENT 1</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos et expedita explicabo harum incidunt iure iusto laboriosam nostrum officiis omnis rem sunt unde veritatis, voluptate! Amet eveniet repellat voluptate!</p>
 
 
-
-
-
+  </section>
+</section>
+</div>
 
 
 <!-- End Container -->
