--- a/Practice.html
+++ b/Practice.html
@@ -14,7 +14,8 @@
 
   <!--  Custom CSS Styles -->
   <link rel="stylesheet" href="css/Practice.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>Practice</title>
 
 </head>
