--- a/sandbox.html
+++ b/sandbox.html
@@ -4,31 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=
             "width=device-width,
-        initial-scale=1,
-        shrink-to-fit=no">
+            initial-scale=1,
+            shrink-to-fit=no">
     <title>Codeup Design</title>
+
+
+    <title>Sanbox</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-    <title>Codeup Design</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href='css/sandbox.css'>
+
+
+
 
 </head>
 <body>
 <!--Top Section HTML-->
 <section id="navbar">
-
-    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+    <nav class="navbar navbar-light navbar-expand-lg">
         <div class="container-fluid">
             <img src="img/logo.png" style="width:55px">
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent" aria-controls="#supportedContent">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent"
+                    aria-controls="#supportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent" aria-labelledby="supportedContent">
+            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent"
+                 aria-labelledby="supportedContent">
                 <div class="collapse-body">
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -52,129 +62,155 @@
             </div>
         </div>
     </nav>
+</section>
+
+<section>
+    <main class="container">
+        <section class="row">
+            <div class="col-12 text-center">
+                <h1 class="display-4 bold-heading">VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                <br>
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-12 text-center">
+                <h2 class="bold-heading">FROM PARK CITY, UTAH</h2>
+                <br>
+            </div>
+        </section>
+    </main>
 
     <section>
-        <main class="container">
-            <section class="row">
-                <div class="col-12 text-center">
-                    <h1 class="display-4">VISUAL DESIGN & WEB DEVELOPMENT</h1>
-                    <br>
+        <div class="container">
+            <div class="row text-center justify-content-center">
+                <div class="col-5 col-md-2 d-flex justify-content-around">
+                    <button type="button" class="btn btn-1 btn-circle btn-xl">DESIGN</button>
                 </div>
-            </section>
-            <section class="row">
-                <div class="col-12 text-center">
-                    <h2>FROM PARK CITY, UTAH</h2>
-                    <br>
+                <div class="col-5 col-md-2 d-flex justify-content-around">
+                    <button type="button" class="btn btn-2 btn-circle btn-xl">DEVELOP</button>
                 </div>
-            </section>
-
-
-            <div class="container">
-                <div class="row text-center justify-content-center">
-                    <div class="col-6 col-lg-3 d-flex justify-content-center">
-                        <button type="button" class="btn btn-1 btn-circle btn-xl">DESIGN</button>
-                    </div>
-                    <div class="col-6 col-lg-3 d-flex justify-content-center">
-                        <button type="button" class="btn btn-2 btn-circle btn-xl">DEVELOP</button>
-                    </div>
-                    <div class="col-6 col-lg-3 d-flex justify-content-center">
-                        <button type="button" class="btn btn-3 btn-circle btn-xl">SUPPORT</button>
-                    </div>
-                    <div class="col-6 col-lg-3 d-flex justify-content-center">
-                        <button type="button" class="btn btn-4 btn-circle btn-xl">HOST</button>
-                    </div>
+                <div class="col-5 col-md-2 d-flex justify-content-around">
+                    <button type="button" class="btn btn-3 btn-circle btn-xl">SUPPORT</button>
+                </div>
+                <div class="col-5 col-md-2 d-flex justify-content-around">
+                    <button type="button" class="btn btn-4 btn-circle btn-xl">HOST</button>
                 </div>
             </div>
-
-
-
-<!--            <section class="row">-->
-<!--                <div class="column d-flex justify-content-between align-items center mb-1">-->
-<!--                    <div class="icon1 d-flex text-white justify-content-center align-items-center">Design</div>-->
-<!--                    <div class="icon2 d-flex text-white justify-content-center align-items-center">Develop</div>-->
-<!--                    <div class="icon3 d-flex text-white justify-content-center align-items-center">Support</div>-->
-<!--                    <div class="icon4 d-flex text-white justify-content-center align-items-center">Host</div>-->
-<!--                </div>-->
-
-<!--                <div class="row my-2 d-flex flex-sm-row justify-content-center p-1">-->
-<!--                    <div class="col-xl-1 col-lg-1 col-md-2 col-6 d-flex  justify-content-xl-center justify-content-lg-center  justify-content-md-center justify-content-end p-2 ">-->
-
-<!--                    <div class="col-xl-1 col-lg-1 col-md-2  col-6 d-flex  justify-content-xl-center justify-content-lg-center justify-content-md-center justify-content-start p-2">-->
-<!--                        -->
-<!--                    <div class="col-xl-1 col-lg-1 col-md-2  col-6 d-flex  justify-content-xl-center justify-content-lg-center justify-content-md-center justify-content-end p-2">-->
-<!--                        -->
-<!--                    <div class="col-xl-1 col-lg-1 col-md-2  col-6 d-flex  justify-content-xl-center justify-content-lg-center justify-content-md-center  justify-content-start p-2">-->
-<!--                        -->
-            </section>
-            <br>
-            <hr>
-            <br>
-        </main>
+            <hr class="d-none d-md-block">
+        </div>
     </section>
+    </main>
+</section>
 
+<br>
+<br>
 
-    <!--Bottom section HTML-->
-    <section class="container-md d-flex flex-column align-items-center section-bottom ">
-        <h6>Selected Work</h6>
-        <div class="d-md-flex gap-md-4">
+<!--Bottom section HTML-->
+<div class="container">
+    <div class="row g-5">
+        <div class="col-lg-7">
+            <section
+                    class="container d-flex  align-items-center section-bottom flex-column align-items-lg-start align-content-xl-start px-0">
+                <h5 class="align-self-center">SELECTED WORK</h5>
+                <div class="mt-5">
 
-            <div>
-                <img class='border border-5' src="img/laptop.avif" style="width: 300px">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
-                    <div class="d-flex gap-1">
-                        <strong class="circle d1-circle">D</strong>
-                        <strong class="circle d2-circle">D</strong>
-                        <strong class="circle s-circle">S</strong>
-                        <strong class="circle h-circle">H</strong>
+                    <div class="d-md-flex gap-md-4 mb-lg-4">
+
+                        <div>
+                            <img class=' featured border border-5' src="img/laptop.avif">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h3 class="mb-0 featured-text">FEATURED PROJECT</h3>
+                                <div class="d-flex gap-1">
+                                    <strong class="circle d1-circle">D</strong>
+                                    <strong class="circle d2-circle">D</strong>
+                                    <strong class="circle s-circle">S</strong>
+                                    <strong class="circle h-circle">H</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <img class='featured border border-5' src="img/multiplelaptops.avif">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
+                                <div class="d-flex gap-1">
+                                    <strong class="circle d1-circle">D</strong>
+                                    <strong class="circle d2-circle">D</strong>
+                                    <strong class="circle s-circle">S</strong>
+                                    <strong class="circle h-circle">H</strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-md-flex gap-md-4">
+
+                        <div>
+                            <img class='featured border border-5' src="img/world.avif">
+                            <div class="d-flex justify-content-between align-items-center mb-2 object-fit-contain">
+                                <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
+                                <div class="d-flex gap-1">
+                                    <strong class="circle d1-circle">D</strong>
+                                    <strong class="circle d2-circle">D</strong>
+                                    <strong class="circle s-circle">S</strong>
+                                    <strong class="circle h-circle">H</strong>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <img class='border border-5 featured' src="img/chip.avif">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
+                                <div class="d-flex gap-1">
+                                    <strong class="circle d1-circle">D</strong>
+                                    <strong class="circle d2-circle">D</strong>
+                                    <strong class="circle s-circle">S</strong>
+                                    <strong class="circle h-circle">H</strong>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div>
-                <img class='border border-5' src="img/multiplelaptops.avif" style="width: 300px">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
-                    <div class="d-flex gap-1">
-                        <strong class="circle d1-circle">D</strong>
-                        <strong class="circle d2-circle">D</strong>
-                        <strong class="circle s-circle">S</strong>
-                        <strong class="circle h-circle">H</strong>
-                    </div>
-                </div>
-            </div>
+
+            </section>
         </div>
-        <div class="d-md-flex gap-md-4">
+        <div class="d-none d-lg-block col-lg-5">
+            <section class="d-none d-md-block section-bottom">
+                <h5 class="mb-4">THE LAST</h5>
+                <div class="d-flex align-items-start mb-5 last">
+                    <div class="tweet-people">
 
-            <div>
-                <img class='border border-5' src="img/world.avif" style="width: 300px">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
-                    <div class="d-flex gap-1">
-                        <strong class="circle d1-circle">D</strong>
-                        <strong class="circle d2-circle">D</strong>
-                        <strong class="circle s-circle">S</strong>
-                        <strong class="circle h-circle">H</strong>
+                        <img class="border border-3 mt-1 me-3" src="img/people.avif" style="width: 80px">
                     </div>
-                </div>
-            </div>
-            <div>
-                <img class='border border-5' src="img/chip.avif" style="width: 300px">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0 featured-text">FEATURED PROJECT</h6>
-                    <div class="d-flex gap-1">
-                        <strong class="circle d1-circle">D</strong>
-                        <strong class="circle d2-circle">D</strong>
-                        <strong class="circle s-circle">S</strong>
-                        <strong class="circle h-circle">H</strong>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div>
-            <h2 class="d-none d-lg-inline">Only visible on large</h2>
-        </div>
 
-    </section>
-    <script src="bootstrap/js/bootstrap.js"></script>
+                    <h4 class="bold-heading">THE ADMIN BAR AND ABSOLUTE POSITIONING</h4>
+                </div>
+                <div class="d-flex align-items-start mb-5 last">
+                    <div class="tweet-tropical">
+                        <img class="border border-3 mt-1 me-3" src="img/tropical.avif" style="width: 80px">
+                    </div>
+                    <h4 class="bold-heading">
+                        NIBBLER AWESOME WEBSITE TESTING</h4>
+                </div>
+                <div class="d-flex align-items-start mb-5 last">
+                    <div class="tweet-mask">
+                        <img class="border border-3 mt-1 me-3" src="img/mask.avif" style="width: 80px">
+                    </div>
+                    <h4 class="bold-heading">HOW
+                        TO GET GOOGLE TO LIKE YOU</h4>
+                </div>
+                <div>
+                    <h6>LAST TWEET</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus odit quas sint? Accusantium
+                        atque
+                        blanditiis eos exercitationem expedita nemo porro quia sequi. Alias et itaque laudantium
+                        maiores
+                        odit possimus sed.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
