--- a/working.html
+++ b/working.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <!--  Required Meta Tags -->
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
     <!--  Bootstrap CSS -->
