template file created

--- a/working.html
+++ b/working.html
@@ -15,7 +15,7 @@
     <!--  Custom CSS Styles -->
     <link rel="stylesheet" href="css/working.css">
 
-    <title>Codeup Design</title>
+    <title>Working Document</title>
 
 </head>
 <body>
