added Defuse the Bomb Activity

--- a/sandbox.html
+++ b/sandbox.html
@@ -22,10 +22,29 @@
 </head>
 <body>
 <!--Start Container-->
+<h1 class="title">Hello World!</h1>
+<button class="changeColor">Click Me</button>
+
+<br>
+<hr>
+
+<h2>Hello Timing</h2>
+
+<p>Click "Try it". Wait 3 seconds, and the page will alert "Hello".</p>
+
+<button onclick="setTimeout(myFunction, 3000);">Try it</button>
+
+<br>
+<hr>
 
 
+<h2>JavaScript Timing</h2>
 
+<p>A script on this page starts this clock:</p>
 
+<p id="demo"></p>
+
+<button onclick="clearInterval(myVar)">Stop time</button>
 
 
 
