--- a/sandbox.html
+++ b/sandbox.html
@@ -46,6 +46,11 @@
 
 <button onclick="clearInterval(myVar)">Stop time</button>
 
+<br>
+<hr>
+
+<button id="btnToClick">HERE WE GO</button>
+
 
 
 <!--End Container-->
