--- a/sandbox.html
+++ b/sandbox.html
@@ -12,85 +12,124 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/0bb8b86cc6.js" crossorigin="anonymous"></script>
 
-    <!--  Google Fonts-->
-
     <!--  Custom CSS Styles -->
     <link rel="stylesheet" href="css/sandbox.css">
 
-    <title>SANDBOX</title>
+    <title>Sandbox</title>
 
 </head>
 <body>
+
+
 <!--Begin Container-->
 
-<div class="page-wrapper">
-    <!--- header containing logo and title --->
-    <header class="container">
-        <div class="row head">
-            <div class="column">
-                <img class="coffee-pic" src="images/coffeelogobrandnew.png" alt="coffee">
-            </div>
-            <div class="column align-center justify-center">
-                <h1>Codeup Coffee</h1>
-            </div>
-        </div>
-    </header>
-    <!--- main page --->
-    <main class="container">
-        <div class="row main grow">
-            <!--- div where coffees are added --->
-            <div class="coffee-column column">
-                <div id="coffees">
-                </div>
-            </div>
-            <!--- right column for the forms --->
-            <div class="column right align-center">
-                <!--- form to search coffee --->
-                <form class="coffee-form" method="" action="">
-                    <h3>Search  Our Coffee</h3>
-                    <label for="roast-selection">Roast</label>
-                    <select id="roast-selection">
-                        <option value="all">All</option>
-                        <option value="light">light</option>
-                        <option value="medium">medium</option>
-                        <option value="dark">dark</option>
-                    </select>
-                    <label for="roast-search">Coffee Name</label>
-                    <input id="roast-search" name="roast-select" type="text" placeholder="">
-                </form>
-                <!--- form to add coffee --->
-                <form class="coffee-add" method="" action="">
-                    <h3>Add A Coffee</h3>
-                    <label for="coffee-add">Roast</label>
-                    <select id="coffee-add" name="coffee-add">
-                        <option value="light">light</option>
-                        <option value="medium">medium</option>
-                        <option value="dark">dark</option>
-                    </select>
-                    <label for="name-add">Coffee Name</label>
-                    <input id="name-add" name="name-add" type="text" placeholder="">
-                    <div class="buttons row">
-                        <button id="submit1">Add</button>
-                        <button id="submit2">Clear</button>
-                    </div>
-                </form>
-                <div>
-                    <img class="gif" src="images/coffeesteam.gif" alt="coffee">
+<section id="navbar">
+    <nav class="navbar navbar-light navbar-expand-lg">
+        <div class="container-fluid">
+            <img src="img/coffeeTest.png" style="width:100px">
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#supportedContent"
+                    aria-controls="#supportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" tabindex="-1" id="supportedContent"
+                 aria-labelledby="supportedContent">
+                <div class="collapse-body">
+
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="navbar-brand d-block" href="#">Codeup Coffee</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 1" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 2" href="#">Our Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link 3" href="#">Our Roast</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </main>
+    </nav>
+</section>
+
+<div class="container">
+<!--Start jumbotron-->
+<!--  NEED TO GET THE IMAGE TO DISAPPEAR ON SMALL SCREENS d-sm-none d-md-block -->
+    <div class="jumbotron d-md-flex d-none d-md-block align-items-md-center">
+        <div class="opacity-75 bg-light flex-fill text-center display-4">Welcome to Codeup Coffee</div>
+    </div>
 </div>
+<!--End jumbotron-->
+
+
+<main class="container">
+    <div class="row">
+        <!--- div where coffees are added --->
+        <div class="coffee-column column">
+            <div id="coffees"></div>
+        </div>
+        <!--- right column for the forms --->
+        <div class="column right align-center">
+            <!--- form to search coffee --->
+            <form class="coffee-form" method=get>
+                <h3>Search  Our Coffee</h3>
+                <label for="roast-selection">Roast</label>
+                <select id="roast-selection">
+                    <option value="all">All</option>
+                    <option value="light">light</option>
+                    <option value="medium">medium</option>
+                    <option value="dark">dark</option>
+                </select>
+                <label for="roast-search">Coffee Name</label>
+                <input id="roast-search" name="roast-select" type="text" placeholder="">
+            </form>
+            <!--- form to add coffee --->
+            <form class="coffee-add" method=get>
+                <h3>Add A Coffee</h3>
+                <label for="coffee-add">Roast</label>
+                <select id="coffee-add" name="coffee-add">
+                    <option value="light">light</option>
+                    <option value="medium">medium</option>
+                    <option value="dark">dark</option>
+                </select>
+                <label for="name-add">Coffee Name</label>
+                <input id="name-add" name="name-add" type="text" placeholder="">
+                <div class="buttons row">
+                    <button id="submit1">Add</button>
+                    <button id="submit2">Clear</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</main>
+
 
 
 
 <!--End Container-->
 
+<footer>
+    <p>(c) 2023 All rights reserved</p>
+    <div id="social-media-links">
+        <i class="fa-brands fa-twitter" style="color: #75d5f5;"></i>
+        <i class="fa-brands fa-facebook" style="color: #005eff;"></i>
+        <i class="fa-brands fa-instagram" style="color: #e770ff;"></i>
+    </div>
+</footer>
+
+
 <!--Bootstrap JS-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
 <script src="js/sandbox.js"></script>
+
 
 
 </body>
