--- a/working.html
+++ b/working.html
@@ -57,74 +57,46 @@
     </nav>
 </section>
 
-
-
-
-
-
-
-
-
-<!--<div>-->
-<!--    &lt;!&ndash;- header containing logo and title -&ndash;&gt;-->
-<!--    <header class="container-fluid">-->
-<!--        <div class="row head">-->
-<!--            <div class="column">-->
-<!--                <img class="coffee-pic" src="img/coffeeTest.png" alt="coffee">-->
-<!--            </div>-->
-<!--            <div class="column">-->
-<!--                <h1>Codeup Coffee</h1>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </header>-->
-<!--    &lt;!&ndash;- main page -&ndash;&gt;-->
-
-
-
-    <main class="container">
-        <div class="row main grow">
-            <!--- div where coffees are added --->
-            <div class="coffee-column column">
-                <div id="coffees">
-                </div>
-            </div>
-            <!--- right column for the forms --->
-            <div class="column right align-center">
-                <!--- form to search coffee --->
-                <form class="coffee-form" method="" action="">
-                    <h3>Search  Our Coffee</h3>
-                    <label for="roast-selection">Roast</label>
-                    <select id="roast-selection">
-                        <option value="all">All</option>
-                        <option value="light">light</option>
-                        <option value="medium">medium</option>
-                        <option value="dark">dark</option>
-                    </select>
-                    <label for="roast-search">Coffee Name</label>
-                    <input id="roast-search" name="roast-select" type="text" placeholder="">
-                </form>
-                <!--- form to add coffee --->
-                <form class="coffee-add" method="" action="">
-                    <h3>Add A Coffee</h3>
-                    <label for="coffee-add">Roast</label>
-                    <select id="coffee-add" name="coffee-add">
-                        <option value="light">light</option>
-                        <option value="medium">medium</option>
-                        <option value="dark">dark</option>
-                    </select>
-                    <label for="name-add">Coffee Name</label>
-                    <input id="name-add" name="name-add" type="text" placeholder="">
-                    <div class="buttons row">
-                        <button id="submit1">Add</button>
-                        <button id="submit2">Clear</button>
-                    </div>
-                </form>
-                <div>
-                    <img class="gif" src="images/coffeesteam.gif" alt="coffee">
-                </div>
-            </div>
+<main class="container">
+    <div class="row main grow">
+        <!--- div where coffees are added --->
+        <div class="coffee-column column">
+            <div id="coffees"></div>
         </div>
-    </main>
+        <!--- right column for the forms --->
+        <div class="column right align-center">
+            <!--- form to search coffee --->
+            <form class="coffee-form" method=get>
+                <h3>Search  Our Coffee</h3>
+                <label for="roast-selection">Roast</label>
+                <select id="roast-selection">
+                    <option value="all">All</option>
+                    <option value="light">light</option>
+                    <option value="medium">medium</option>
+                    <option value="dark">dark</option>
+                </select>
+                <label for="roast-search">Coffee Name</label>
+                <input id="roast-search" name="roast-select" type="text" placeholder="">
+            </form>
+            <!--- form to add coffee --->
+            <form class="coffee-add" method=get>
+                <h3>Add A Coffee</h3>
+                <label for="coffee-add">Roast</label>
+                <select id="coffee-add" name="coffee-add">
+                    <option value="light">light</option>
+                    <option value="medium">medium</option>
+                    <option value="dark">dark</option>
+                </select>
+                <label for="name-add">Coffee Name</label>
+                <input id="name-add" name="name-add" type="text" placeholder="">
+                <div class="buttons row">
+                    <button id="submit1">Add</button>
+                    <button id="submit2">Clear</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</main>
 </div>
 
 
