--- a/Practice.html
+++ b/Practice.html
@@ -22,55 +22,47 @@
 </head>
 <body>
 <!--Start Container-->
-<header>
-    <div class="logo-container">
-        <img src="./img/logo.svg" alt="logo" />
-        <h4 class="logo">Three Dots</h4>
-    </div>
-    <nav>
-        <ul class="nav-links">
-            <li><a class="nav-link" href="#">Specs</a></li>
-            <li><a class="nav-link" href="#">Products</a></li>
-            <li><a class="nav-link" href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="cart">
-        <img src="./img/cart.svg" alt="cart" />
-    </div>
-</header>
+<!--    <div class="container">-->
+<!--        <h1 id="main-heading">favorite Movie Franchise</h1>-->
+<!--            <ul>-->
+<!--                <li class="list-items">The Matrix</li>-->
+<!--                <li class="list-items">Star Wars</li>-->
+<!--                <li class="list-items">Lord of the Rings</li>-->
+<!--                <li class="list-items">Harry Potter</li>-->
+<!--                <li class="list-items">Marvel</li>-->
+<!--            </ul>-->
+<!--    </div>-->
 
-<main>
-    <section class="presentation">
-        <div class="introduction">
-            <div class="intro-text">
-                <h1>Laptop for the future</h1>
-                <p>
-                    The new 14 inch bezeless display oferring a 4k
-                    display with touch screen.
-                </p>
-            </div>
-            <div class="cta">
-                <button class="cta-select">14 Inch</button>
-                <button class="cta-add">Add To Cart</button>
-            </div>
-        </div>
-        <div class="cover">
-            <img src="./img/matebook.png" alt="matebook" />
-        </div>
-    </section>
+<!--    <h1 id="main-heading2">Event Listeners</h1>-->
+<!--    <div class="container-fluid">-->
+<!--        <div class="boxes box-1">-->
+<!--            <h1 id="heading">Example 1</h1>-->
+<!--            <button onclick="alert('I Love JavaScript')">Enter</button>-->
+<!--        </div>-->
+<!--        <div class="boxes box-2">-->
+<!--            <h1 id="heading">Example 2</h1>-->
+<!--            <button class="btn-2">Enter</button>-->
+<!--        </div>-->
+<!--        <div class="boxes box-2">-->
+<!--            <h1 id="heading">Example 3</h1>-->
+<!--            <button class="btn-3">Enter</button>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <div class="laptop-select">
-        <img src="./img/arrow-left.svg" alt="" />
-        <img src="./img/dot.svg" alt="" />
-        <img src="./img/dot-full.svg" alt="" />
-        <img src="./img/dot-full.svg" alt="" />
-        <img src="./img/arrow-right.svg" alt="" />
+<h1 id="main-heading2">Hidden Content</h1>
+<div class="container">
+    <button class="reveal-btn boxes">Reveal More</button>
+
+    <div class="hidden-content boxes">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus facere non quod voluptas. Aliquam asperiores molestiae non similique vero. Ab delectus eos exercitationem fugiat laudantium maiores minima non quaerat recus
     </div>
 
-    <img class="big-circle" src="./img/big-eclipse.svg" alt="" />
-    <img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
-    <img class="small-circle" src="./img/small-eclipse.svg" alt="" />
-</main>
+</div>
+
+
+
+
+
 
 <!--End Container-->
 
@@ -78,7 +70,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/sandbox.js"></script>
+<script src="js/practice.js"></script>
 
 
 </body>
