--- a/DOM Practice.html
+++ b/DOM Practice.html
@@ -43,7 +43,7 @@
 
 <!--DOM MANIPULATION-->
 //getElementById()
-//const title = document.getElementByIs('test')
+//const title = document.getElementById('test')
 
 //getElementByClassName()
 //const listItems = document.getElementByClassName('list-items')
