--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 
-  <title>SANDBOX</title>
+  <title>jQuery Practice</title>
 
   <!--  Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +17,7 @@
   <!--  Google Fonts-->
 
   <!--  Custom CSS Styles -->
-  <link rel="stylesheet" href="css/sandbox.css">
+  <link rel="stylesheet" href="css/jQueryPractice.css">
 
 </head>
 <body>
@@ -39,7 +39,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <!-- Your custom JS goes here -->
-<script src="js/sandbox.js"></script>
+<script src="js/jQueryPractice.js"></script>
 
 
 
