--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -22,7 +22,51 @@
 </head>
 <body>
 <!--Start Container-->
+<h1>jQuery Practice</h1>
 
+<h1 id="codeup">Hello Codeup</h1>
+
+
+<div class="mlbTeams">
+  <ul id="centralDivision">
+    <li>Cardinals</li>
+    <li>Cubs</li>
+    <li>Pirates</li>
+    <li>Reds</li>
+    <li>Brewers</li>
+  </ul>
+
+  <ul id="eastDivision">
+    <li>Braves</li>
+    <li>Mets</li>
+    <li>Phillies</li>
+    <li>Nationals</li>
+    <li>Marlins</li>
+  </ul>
+
+  <ul id="westDivision">
+    <li>Dbacks</li>
+    <li>Giants</li>
+    <li>Dodgers</li>
+    <li>Padres</li>
+    <li>Rockies</li>
+  </ul>
+</div>
+
+<div class="leagueSummary">
+  <h2 id="summary">League Summary</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad, blanditiis, cupiditate debitis, dicta distinctio expedita minus nesciunt officia omnis placeat quia quibusdam sapiente voluptates.
+  </p>
+
+  <h2 id="rumors">Trade Rumors</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad, blanditiis, cupiditate debitis, dicta distinctio expedita minus nesciunt officia omnis placeat quia quibusdam sapiente voluptates.
+  </p>
+
+
+
+</div>
 
 
 
@@ -36,7 +80,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
 <!--Bootstrap JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
 
 <!-- Your custom JS goes here -->
 <script src="js/jQueryPractice.js"></script>
