added events exercise

--- a/sandbox.html
+++ b/sandbox.html
@@ -22,12 +22,23 @@
 </head>
 <body>
 <!--Start Container-->
+<p>
+    Click somewhere in the output box [here] to ensure focus.<br>
+    Then enter the following code using your keyboard:
+</p>
 
-
-
-
-
-
+<p class="code">
+    <span>&uarr;</span>
+    <span>&uarr;</span>
+    <span>&darr;</span>
+    <span>&darr;</span>
+    <span>&larr;</span>
+    <span>&rarr;</span>
+    <span>&larr;</span>
+    <span>&rarr;</span>
+    <span>B</span>
+    <span>A</span>
+</p>
 
 <!--End Container-->
 
